fix scrollbar for recent-visitted-post-bar

--- a/src/app/recent-visited-post/component/recent-visited-post/recent-visited-post.component.scss
+++ b/src/app/recent-visited-post/component/recent-visited-post/recent-visited-post.component.scss
@@ -1,16 +1,16 @@
-#wrapper {
+#recent_visited_post_bar {
     width: 100%;
     height: 100%;
     display: block;
     background-color: rgb(243, 172, 230);
     overflow: hidden;
     scrollbar-gutter: stable;
-    // padding-right: var(--scrollbar_size);
-    // background-clip: content-box;
-    // box-sizing: content-box;
+    padding-right: calc(var(--scrollbar_size) - 1px);
+    background-clip: content-box;
+    box-sizing: border-box;
 }
 
-#wrapper:hover {
+#recent_visited_post_bar:hover {
     overflow-y: auto;
 }
 
